<resources>
    <string name="app_name" translatable="false">Music Match</string>
    <!-- Max's string-->
    <string-array name="gender_options">
        <item>Woman</item>
        <item>Man</item>
        <item>Non-binary</item>
    </string-array>

    <string-array name="music_genre_options">
        <item>Pop</item>
        <item>R&amp;B</item>
        <item>Rock</item>
        <!-- Add more genres as needed -->
    </string-array>

    <string-array name="location_options">
        <item>Cape Town</item>
        <item>Johannesburg</item>
        <item>Durban</item>
    </string-array>

    <!-- Allan's strings
    **Please Check String Exists Before Creating new One -->
    <string name="signup_redirect_message">New Here?</string>
    <string name="signup_caption" translatable="false"><u>Sign Up</u></string>
    <string name="email_caption">Enter Your Email:</string>
    <string name="emailcaption">Enter An Email:</string>
    <string name="password_caption">Enter Your Password:</string>
    <string name="passwordcaption">Enter A Password:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailpasswordhead" translatable="false">Email &amp; Password</string>
    <string name="sign_in_caption">Sign In</string>
    <string name="verify_caption">Verify</string>
    <string name="continue_caption">Continue</string>
    <string name="permission">Permission</string>
    <string name="permission_subheading">To help find you that future someone,</string>
    <string name="permission_description">we will need to have access to the following services:</string>
    <string name="location_permission">Your Location Services</string>
    <string name="spotify_permission">Your Spotify Account</string>
    <string name="phone_permission">Your Phone Number</string>
    <string name="permission_agree" translatable="false">Agree &amp; Continue </string>
    <string name="loser_behaviour">Do Not Allow</string>
    <string name="about_you">About You</string>
    <string name="name">  Name</string>
    <string name="dob">  Date Of Birth</string>
    <string name="gender_header">Select Your Gender:</string>
    <string name="youalrightladies"> Woman</string>
    <string name="manorbear"> Man</string>
    <string name="nobeanie" translatable="false"> Non-Binary</string>
    <string name="moregendersplease">Select the correct label for you</string>
    <string name="nor_mal">Select Your Pronouns:</string>
    <string name="images_head">Let Us See You</string>
    <string name="images_subheading">Upload 6 Images of Yourself</string>
    <string name="findspotify">Find Your Spotify Account</string>
    <string name="thisu">Is this You?</string>
    <string name="search">Search</string>
    <string name="spotifyinputhinte">Email</string>
    <string name="spotifyinputhints">Spotify Username</string>
    <string name="warning_need_token">You need to request an access token first</string>
    <string name="spotify_user_parse_fail">Failed to parse user details</string>
    <string name="spotify_user_fetch_fail">Failed to fetch user details</string>
    <string name="spotify_userid_empty">Please enter your Spotify Username</string>

    <!-- sven's strings :) -->
    <string name="likesYouHeader">Singles in your area</string>
    <string name="contactHeader">Chat</string>


    <!--St10080623 Reilly Mare strings -->
    <string name="suiterName" translatable="false">Reilly Mare, 32</string>
    <string name="pronouns" translatable="false">he/him/his</string>
    <string name="songName" translatable="false">Sweet child o Mine</string>
    <string name="Artist" translatable="false">Guns N Roses</string>
    <string name="settingsHeader">Settings</string>
    <string name="biometricLogin">Use Biometric Login</string>
    <string name="language">Language</string>
    <string name="pushNote">Push Notifications</string>
    <string name="offlineMode">Allow Offline Mode</string>
    <string name="blockedUsers">Blocked Users</string>
    <string name="saveChanges">Save Changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked_you">Liked You</string>
    <string name="match">Match</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="spotify_account_email_does_not_match_registered_email">Spotify Account email does not match registered email</string>
    <string name="title_activity_match_profile">activity_match_profile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="SignInStart" translatable="false">Already have an account?     Sign in</string>
    <string name="MMSlogan" translatable="false">For the Love of Music</string>
    <string name="music_match" translatable="false">Music Match</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="sign_up_with_google" translatable="false">Sign Up with Google</string>

    <!--Reilly Mare strings -->

</resources>