<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Register_Email">

    <EditText
        android:id="@+id/etxtEmailReg"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/light_grey"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress|textNoSuggestions"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemailcaption" />

    <Button
        android:id="@+id/btnContinueReg"
        android:layout_width="274dp"
        android:layout_height="59dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/spotify_green"
        android:fontFamily="@font/circular_black"
        android:text="@string/continue_caption"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtPasswordReg"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtpasswordcaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/circular_black"
        android:text="@string/passwordcaption"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtEmailReg" />

    <EditText
        android:id="@+id/etxtPasswordReg"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/light_grey"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textPassword|textNoSuggestions"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpasswordcaption" />

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/circular_black"
        android:text="@string/emailpasswordhead"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtemailcaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/circular_black"
        android:text="@string/emailcaption"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHead" />

</androidx.constraintlayout.widget.ConstraintLayout>