<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".Register_About_You">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/circular_black"
        android:text="@string/about_you"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="255dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/spotify_green"
        android:fontFamily="@font/circular_bold"
        android:text="@string/continue_caption"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnPronouns"
        app:layout_constraintVertical_bias="0.711" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/lowkey_grey"
        android:ems="10"
        android:fontFamily="@font/circular_medium"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/edDOB"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/lowkey_grey"
        android:ems="10"
        android:fontFamily="@font/circular_medium"
        android:hint="@string/dob"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDOB" />

    <RadioGroup
        android:id="@+id/rdgGender"
        android:layout_width="235dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/lowkey_grey"
        android:outlineProvider="background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtGender">

        <RadioButton
            android:id="@+id/rdbWoman"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_medium"
            android:text="@string/youalrightladies" />

        <RadioButton
            android:id="@+id/rdbMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_medium"
            android:text="@string/manorbear" />

        <RadioButton
            android:id="@+id/rdbInvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_medium"
            android:text="@string/no_binary" />

        <TextView
            android:id="@+id/txtMoreGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circular_medium"
            android:text="@string/moregendersplease"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/spGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:visibility="invisible" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spnPronouns"
        android:layout_width="216dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/lowkey_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPronoun"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/circular_medium"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    <TextView
        android:id="@+id/txtDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/circular_medium"
        android:text="@string/dob"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/circular_medium"
        android:text="@string/gender_header"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edDOB" />

    <TextView
        android:id="@+id/txtPronoun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/circular_medium"
        android:text="@string/nor_mal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgGender" />

</androidx.constraintlayout.widget.ConstraintLayout>