<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image">

    <!-- Dark Overlay to Tint the Background -->


    <View
        android:id="@+id/overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/music_match"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/MMSlogan"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <!-- Sign Up Button -->

    <!-- Sign Up With Google Button -->
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSignUpWithGoogle"
        android:layout_width="273dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/googleLogo"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="4dp"
        android:contentDescription="Google Logo"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpWithGoogle"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:srcCompat="@drawable/google_logo" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="215dp"
        android:layout_height="42dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/SignInStart"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUpWithGoogle" />


</androidx.constraintlayout.widget.ConstraintLayout>
